# InfiniteCraft-Scrap

./: Cargo.toml  README.md  infinite-craft.db
src/: db.rs  http.rs  main.rs  model.rs
