[package]
name = "infinite-craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.7.2", features = ["serde", "serde_json", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.12.1"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
url = "2.5.0"
